# jnihook-rs

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/: lib.rs
src/: lib.rs
